<resources>
    <string name="app_name">MoneyApplication</string>
    <string name="full_name">Your Full Name</string>
    <string name="phone">Your Phone</string>
    <string name="address">Your Address</string>
    <string name="identity_card_number">Your Identity Card Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign Up</string>
    <string name="save">Save</string>
    <string name="birthday">Your birthday</string>
    <string name="email">Your email</string>


</resources>
