<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Register"
    android:background="@mipmap/back"
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/tutor"
        android:layout_gravity="center"
        style="@style/logo_register"
        />
    <EditText
        android:id="@+id/register_etxtFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/full_name"
        android:background="@drawable/boderradius_blue"
        style="@style/register"
        />

    <EditText
        style="@style/register"
        android:id="@+id/register_etxtPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:background="@drawable/boderradius_blue"
        />
    <EditText
        android:id="@+id/register_etxtAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address"
        android:background="@drawable/boderradius_blue"
        style="@style/register"
        />
    <EditText
        android:id="@+id/register_etxtCardNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/identity_card_number"
        android:background="@drawable/boderradius_blue"
        style="@style/register"
        />
    <EditText
        android:id="@+id/register_etxtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:background="@drawable/boderradius_blue"
        style="@style/register"
        />
    <EditText
        android:id="@+id/register_etxtConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"
        android:background="@drawable/boderradius_blue"
        style="@style/register"
        />
    <Button
        android:id="@+id/button_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        style="@style/button_register"
        />

</LinearLayout>