<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">
    <ScrollView android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/header_cover_image"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:scaleType="centerCrop"
                />

            <ImageButton
                android:id="@+id/user_profile_photo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_below="@+id/header_cover_image"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-60dp"
                android:background="@drawable/profile_circular_border_imageview"
                android:elevation="5dp"
                android:padding="20dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/tutor" />

            <RelativeLayout
                android:id="@+id/profile_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/header_cover_image"
                android:background="#1990b0"
                android:elevation="4dp"
                android:paddingBottom="24dp">


                <ImageView
                    android:id="@+id/add_friend"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:src="@mipmap/user_add" />


                <TextView
                    android:id="@+id/user_profile_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="76dp"
                    android:text="Nguyen Thi Thuyen Quyen"
                    android:textColor="#fff"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/user_profile_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/user_profile_name"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="12dp"
                    android:text="@string/phone"
                    android:textColor="#fff"
                    android:textSize="14sp" />
            </RelativeLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profile_layout"
                android:layout_marginTop="5dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/user_profile_email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="#fff"
                    android:clickable="true"
                    android:elevation="4dp"
                    android:padding="20dp"
                    android:text="Your Email" />
                <TextView
                    android:id="@+id/user_profile_address"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="#fff"
                    android:clickable="true"
                    android:elevation="4dp"
                    android:padding="20dp"
                    android:text="@string/address" />

                <TextView
                    android:id="@+id/user_profile_birthday"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="3dp"
                    android:background="#fff"
                    android:clickable="true"
                    android:elevation="4dp"
                    android:padding="20dp"
                    android:text="@string/birthday" />

                <TextView
                    android:id="@+id/user_profile_identifyCardNumber"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="#fff"
                    android:clickable="true"
                    android:elevation="4dp"
                    android:padding="20dp"
                    android:text="@string/identity_card_number" />
                <TextView
                    android:id="@+id/user_profile_userName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="#fff"
                    android:clickable="true"
                    android:elevation="4dp"
                    android:padding="20dp"
                    android:text="UserName" />

                <TextView
                    android:id="@+id/user_profile_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="3dp"
                    android:background="#fff"
                    android:clickable="true"
                    android:elevation="4dp"
                    android:padding="20dp"
                    android:text="@string/password" />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    style="@style/profile"
                    />

            </LinearLayout>
        </RelativeLayout>

    </ScrollView>


</LinearLayout>
